--- a/PatientInfoModule/Views/Info/DisabilityDocumentView.xaml
+++ b/PatientInfoModule/Views/Info/DisabilityDocumentView.xaml
@@ -7,6 +7,7 @@
              xmlns:misc="clr-namespace:Core.Wpf.Misc;assembly=Core.Wpf"
              xmlns:viewModels="clr-namespace:PatientInfoModule.ViewModels"
              xmlns:editors="http://wpfcontrols.com/"
+             xmlns:behaviors="clr-namespace:Core.Wpf.Behaviors;assembly=Core.Wpf"
              mc:Ignorable="d" 
              d:DesignHeight="300"
              d:DesignWidth="450" 
@@ -67,7 +68,8 @@
                   HorizontalAlignment="Stretch"
                   ItemsSource="{Binding DisabilityTypes}"
                   SelectedValue="{Binding DisabilityTypeId, ValidatesOnDataErrors=True, UpdateSourceTrigger=PropertyChanged}" 
-                  Validation.ErrorTemplate="{StaticResource ValidationTemplate}"/>
+                  Validation.ErrorTemplate="{StaticResource ValidationTemplate}"
+                  behaviors:FocusAdvancement.FocusAdvancementDirection="ForwardOnly"/>
         <TextBlock Grid.Row="2"
                    Grid.Column="0"
                    Text="Серия" />
@@ -115,7 +117,8 @@
             <DatePicker SelectedDate="{Binding ToDate, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                         Margin="3 3 22 3"
                         Validation.ErrorTemplate="{StaticResource ValidationTemplate}"
-                        IsEnabled="{Binding HasToDate}" />
+                        IsEnabled="{Binding HasToDate}"
+                        behaviors:FocusAdvancement.FocusAdvancementDirection="BackwardOnly"/>
         </StackPanel>
     </Grid>
 </UserControl>
