--- a/PatientInfoModule/Views/Info/SocialStatusView.xaml
+++ b/PatientInfoModule/Views/Info/SocialStatusView.xaml
@@ -8,6 +8,7 @@
              xmlns:viewModels="clr-namespace:PatientInfoModule.ViewModels"
              xmlns:editors="http://wpfcontrols.com/"
              xmlns:data="clr-namespace:Core.Data;assembly=Core.Data"
+             xmlns:behaviors="clr-namespace:Core.Wpf.Behaviors;assembly=Core.Wpf"
              mc:Ignorable="d" 
              d:DesignHeight="300"
              d:DesignWidth="450" 
@@ -65,7 +66,8 @@
                   HorizontalAlignment="Stretch"
                   ItemsSource="{Binding SocialStatusTypes}"
                   SelectedItem="{Binding SelectedSocialStatusType, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
-                  Validation.ErrorTemplate="{StaticResource ValidationTemplate}"/>
+                  Validation.ErrorTemplate="{StaticResource ValidationTemplate}"
+                  behaviors:FocusAdvancement.FocusAdvancementDirection="ForwardOnly"/>
         <TextBlock Grid.Row="2"
                    Grid.Column="0"
                    Text="Организация"
@@ -126,7 +128,8 @@
             <DatePicker SelectedDate="{Binding ToDate, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True}"
                         Margin="3 3 22 3"
                         Validation.ErrorTemplate="{StaticResource ValidationTemplate}"
-                        IsEnabled="{Binding HasToDate}" />
+                        IsEnabled="{Binding HasToDate}"
+                        behaviors:FocusAdvancement.FocusAdvancementDirection="BackwardOnly"/>
         </StackPanel>
     </Grid>
 </UserControl>
