--- a/PatientRecordsModule/Views/PersonHierarchicalRecordsView.xaml
+++ b/PatientRecordsModule/Views/PersonHierarchicalRecordsView.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:viewModels="clr-namespace:Shared.PatientRecords.ViewModels">
     <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
-    <HierarchicalDataTemplate DataType="{x:Type viewModels:PersonHierarchicalRecordsViewModel}" ItemsSource="{Binding NestedItems}">
+    <HierarchicalDataTemplate DataType="{x:Type viewModels:PersonHierarchicalRecordsViewModel}" ItemsSource="{Binding Childs}">
         <Border BorderBrush="Black" BorderThickness="0.5" CornerRadius="4">
             <Grid HorizontalAlignment="Stretch">
                 <Grid.RowDefinitions>
