--- a/PatientRecordsModule/Views/PersonHierarchicalVisitsView.xaml
+++ b/PatientRecordsModule/Views/PersonHierarchicalVisitsView.xaml
@@ -3,7 +3,7 @@
                     xmlns:viewModels="clr-namespace:Shared.PatientRecords.ViewModels">
     <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter"/>
 
-    <HierarchicalDataTemplate DataType="{x:Type viewModels:PersonHierarchicalVisitsViewModel}" ItemsSource="{Binding NestedItems}">
+    <HierarchicalDataTemplate DataType="{x:Type viewModels:PersonHierarchicalVisitsViewModel}" ItemsSource="{Binding Childs}">
         <Border BorderBrush="Black" BorderThickness="0.5" Background="#FF9EBBDA" CornerRadius="4">
             <Grid HorizontalAlignment="Stretch">
                 <Grid.RowDefinitions>
